kubernetes/apps/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`uptime.mauzlab.de`)
      services:
        - name: uptime-kuma
          port: 3001
  tls: {}
